--- a/README.Rmd
+++ b/README.Rmd
@@ -19,6 +19,8 @@ knitr::opts_chunk$set(
 
 The goal of learnr.tidyeval is to support an interactive tutorial for tidyeval.
 
+Please see the operational shiny-app at https://ijlyttle.shinyapps.io/tidyeval
+
 ## Installation
 
 You can install learnr.tidyeval from github with:
