--- a/inst/tutorials/tidyeval/tidyeval.Rmd
+++ b/inst/tutorials/tidyeval/tidyeval.Rmd
@@ -1,5 +1,5 @@
 ---
-title: Tidyeval
+title: Tidy Evaluation
 author: "Ian Lyttle, adapted from material by Lionel Henry and Hadley Wickham"
 output: 
   learnr::tutorial:
@@ -11,22 +11,79 @@ runtime: shiny_prerendered
 library("glue")
 library("dplyr")
 library("learnr")
+library("vembedr")
 library("learnr.tidyeval")
 
 options(width = 80)
 knitr::opts_chunk$set(comment = "#>")
 ```
 
-## Introduction
+## Introductions
+
+### Introduction: second edition (2021)
+
+Since I first put this tutorial together, the Tidyverse team have come out with great presentations that made tidy evaluation easier to understand. 
+My goal in this tutorial is to provide some exercises to build on their presentations.
+
+At rstudio::conf(2019), Jenny Bryan and Lionel Henry gave consecutive talks.
+Jenny set up the problem by asking the question "do you *really need* tidy evaluation?", then showing some cases where you can use straightforward techniques to avoid using it:  
+
+```{r jb-rs-2019, echo=FALSE}
+embed_url("https://www.youtube.com/watch?v=2BXPLnLMTYo") %>% 
+  use_align("center")
+```
+
+Spoiler alert -- you need to use tidy evaluation only if:
+
+  - you are writing functions.
+  - these functions use bare column-names as arguments, e.g. `dplyr::select(mtcars, mpg)`.
+  - such a function does not simply pass these arguments **undisturbed** to a Tidyverse function.
+
+Lionel then talked about how to think about tidy evaluation, in case you need to use it:
+
+```{r lh-rs-2019, echo=FALSE}
+embed_url("https://www.youtube.com/watch?v=2-gknoyjL3A") %>% 
+  use_align("center")
+```
+
+More spoilers -- the goal of tidy evaluation is to help you, as a function-writer, be unambiguous about whether a function argument refers to a data frame or the calling environment. For example, in the code:
+
+```{r dplyr-select, eval=FALSE}
+library("dplyr")
+
+mpg <- 3
+
+mtcars %>% 
+  select(mpg)
+```
+
+The `select()` function does not care that `mpg`is defined in the calling environment; it *knows* that `mpg` refers to `mtcars$mpg`. 
+
+At rstudio::conf(2020), Lionel provided an update where he introduced some new syntax that makes Tideval a little bit easier.
+Preview: *embrace the argument*.
+
+```{r lh-rs-2020, echo=FALSE}
+embed_url("https://www.youtube.com/watch?v=SW_TUkPXSmA") %>% 
+  use_align("center")
+```
+
+I think these videos provide an excellent introduction to tidy evaluation. 
+If you want to read more, these references get into more detail on the Tidyverse team's current thinking:
+
+- [Programming with dplyr](http://dplyr.tidyverse.org/articles/programming.html)
+- [Using ggplot2 in packages](https://ggplot2.tidyverse.org/articles/ggplot2-in-packages.html)
+- [Metaprogramming chapter](https://adv-r.hadley.nz/metaprogramming.html) from Hadley Wickham's [Advanced R](https://adv-r.hadley.nz)
+
+### Introduction: first edition (2018)
 
 Confession: for years, I have struggled to wrap my head around non-standard evaluation. I would sit down over a weekend and get myself to the point where I _thought_ I understood it, I _seemed_ to be able to write code to use it effectively, then a month later I would have no idea of what I had written or why it seemed to work. Here's a receipt:
 
 <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Personal <a href="https://twitter.com/hashtag/rstats?src=hash&amp;ref_src=twsrc%5Etfw">#rstats</a> resolution: 2016 will be the year I wrap my head around non-standard evaluation (just like 2015, 2014, 2013, ...)</p>&mdash; Ian Lyttle (@ijlyttle) <a href="https://twitter.com/ijlyttle/status/682678320039899141?ref_src=twsrc%5Etfw">December 31, 2015</a></blockquote>
 <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
 
-At first glance, tidyeval might seem just as mysterious - a new way to deal with non-standard evaluation. I came to appreciate that tidyeval is built on a series of principles; as I came to understand (at least some of) these principles, it became easier for me to retrace my steps and to take new ones. At this point I think I understand the basic principles such that, at the risk of telling you more than I know, I can discuss those basics here.
+At first glance, tidy evaluation might seem just as mysterious - a new way to deal with non-standard evaluation. I came to appreciate that tidy evaluation is built on a series of principles; as I came to understand (at least some of) these principles, it became easier for me to retrace my steps and to take new ones. At this point I think I understand the basic principles such that, at the risk of telling you more than I know, I can discuss those basics here.
 
-Of course, none of this material is possible without the work done by Lionel Henry and Hadley Wickham, who developed the tidyeval framework. Indeed, the examples shown here are adapted from their sources:
+Of course, none of this material is possible without the work done by Lionel Henry and Hadley Wickham, who developed the tidy evaluation framework. Indeed, the examples shown here are adapted from their sources:
 
 - [Programming with dplyr](http://dplyr.tidyverse.org/articles/programming.html)
 - [Tidy evaluation](https://tidyeval.tidyverse.org/)
@@ -35,11 +92,49 @@ Of course, none of this material is possible without the work done by Lionel Hen
 
 I am particularly impressed with the "Erratum" article, as it explains very well the factors that went into a design choice, as well as the factors that went into the decision to modify that choice.
 
-The goal of this tutorial is to make it easier for you to tackle these references. As you make your way through this, please keep in mind that I am an imperfect interpreter of tidyeval principles. I will do my best to convey what I understand; any shortcomings are my sole responsibility, which I will rectify as they become apparent ([issue page](https://github.com/ijlyttle/learnr.tidyeval/issues)). 
+The goal of this tutorial is to make it easier for you to tackle these references. As you make your way through this, please keep in mind that I am an imperfect interpreter of tidy evaluation principles. I will do my best to convey what I understand; any shortcomings are my sole responsibility, which I will rectify as they become apparent ([issue page](https://github.com/ijlyttle/learnr.tidyeval/issues)). 
 
 This tutorial is produced using the [__learnr__ package](https://rstudio.github.io/learnr/), which lets you produce a document that includes interactive exercises, and can be published to RStudio's [shinyapps service](http://www.shinyapps.io/).
 
-## What motivates tidyeval?
+## Easy off-ramps
+
+Do you *need* tidy evaluation?
+
+In her rstudio::conf(2019) presentation, [Jenny Bryan tackles this topic](https://www.youtube.com/watch?v=2-gknoyjL3A) much more effectively than I could ever hope to.
+
+In essence:
+
+ - If you are not writing functions, worry not!
+
+ - If you are not writing functions that use tidy evaluation - worry not!
+
+ - If you can pass the arguments **undisturbed**, pass the dots!
+ 
+#### Your turn
+
+Here's a motivating example from Jenny's talk:
+
+```{r pass-the-dots, exercise=TRUE}
+grouped_height <- function(df, ...) {
+
+  # if this is a package function, be sure to import the `%>%` operator
+  df %>%
+    dplyr::group_by(...) %>%
+    dplyr::summarise(avg_height = mean(height, na.rm = TRUE))
+}
+
+grouped_height(starwars, homeworld)
+# grouped_height(starwars, homeworld, eye_color)
+```
+
+Try grouping by any number of columns in the `starwars` dataset.
+
+If your function just moves a set of arguments straight into a dplyr (or ggplot2) function, you can just pass the dots and let dplyr do its thing.
+If you're anything like me: the less you do, the less chance to mess something up :)
+
+Note: to use the magrittr pipe in a package-function, you can import the operator using `usethis::use_pipe()`.
+
+## What motivates tidy evaluation?
 
 ### Advantages
 
@@ -57,7 +152,7 @@ starwars[starwars$species == "Droid" &  !is.na(starwars$species), ]
 
 The dplyr code is more concise - you don't have to repeat the name of the data frame, or specify that you don't want `NA` values.
 
-As well, you may have used dplyr to access databases. If the `starwars` tibble were stored on a remote database, rather than in a local data-frame, dplyr would translate the expression `species == "Droid"` into SQL to obtain the same result. Tidyeval is the framework that dplyr uses to adapt the expression to the situation, so that it "just works".
+As well, you may have used dplyr to access databases. If the `starwars` tibble were stored on a remote database, rather than in a local data-frame, dplyr would translate the expression `species == "Droid"` into SQL to obtain the same result. tidy evaluation is the framework that dplyr uses to adapt the expression to the situation, so that it "just works".
 
 ### Things to keep in mind
 
@@ -121,13 +216,13 @@ filter(starwars, hair_color == eye_color)
 
 ### Summary
 
-Tidyeval provides a set of rules for the default evaluation of expressions, and a set of tools that let you change that default whenever you need to. For people who write functions and people who use those functions, tidyeval provides a framework that allows both sets of people be confident that a function will do what they expect it to do.
+Tidy evaluation provides a set of rules for the default evaluation of expressions, and a set of tools that let you change that default whenever you need to. For people who write functions and people who use those functions, tidy evaluation provides a framework that allows both sets of people be confident that a function will do what they expect it to do.
 
-In the next few sections, we will discuss the principles and concepts of tidyeval, then show how you can use these to call functions that use tidyeval (like those in dplyr). Finally, we will discuss how you can write functions that use the tidyeval framework.
+In the next few sections, we will discuss the principles and concepts of tidy evaluation, then show how you can use these to call functions that use tidy evaluation (like those in dplyr). Finally, we will discuss how you can write functions that use the tidy evaluation framework.
 
 ## Principles and concepts
 
-We can demonstrate tidyeval's central idea using strings. Let's say that we want to compose a string to include a name that we specify elsewhere. This warm-up example is lifted from the [dplyr programming vignette](http://dplyr.tidyverse.org/articles/programming.html).
+We can demonstrate tidy evaluation's central idea using strings. Let's say that we want to compose a string to include a name that we specify elsewhere. This warm-up example is lifted from the [dplyr programming vignette](http://dplyr.tidyverse.org/articles/programming.html).
 
 ##### Your turn
 
@@ -172,9 +267,9 @@ This may be a good time to recall the [famous quote from _Advanced R_](https://a
 > Everything that happens is a function call."
 > — John Chambers
 
-The ultimate result of evaluation (tidy or otherwise) is a value. Here, we will go over the types of objects used in tidyeval to get to values. Types of values are logicals, doubles, integers, characters, and so on. With a value, everything has been evaluated - there is nothing left to define. Here's an example:
+The ultimate result of evaluation (tidy or otherwise) is a value. Here, we will go over the types of objects used in tidy evaluation to get to values. Types of values are logicals, doubles, integers, characters, and so on. With a value, everything has been evaluated - there is nothing left to define. Here's an example:
 
-```{r}
+```{r is-droid}
 is_droid <- starwars$species == "Droid" & !is.na(starwars$species)
 
 is_droid
@@ -182,7 +277,7 @@ is_droid
 
 You can send these values as an argument to dplyr's `filter()` function:
 
-```{r}
+```{r is-droid-filter}
 filter(starwars, is_droid)
 ```
 
@@ -194,17 +289,20 @@ filter(starwars, species == "Droid")
 
 Here, we used an __expression__, `species == "Droid"`; it is then `filter()`'s job to evaluate this expression into values - then use those values to return the corresponding rows of the data frame. It may be useful to think of an expression as a set of instructions.
 
-As we have found out, when dplyr evaluates an expression, its default is to look for variable-names first in the data frame, then in the context from which you called the function. Going forward, we will go through some examples of how you can use tidyeval to build expressions that are evaluated according to _your_ specifications.
+As we have found out, when dplyr evaluates an expression, its default is to look for variable-names first in the data frame, then in the context from which you called the function. Going forward, we will go through some examples of how you can use tidy evaluation to build expressions that are evaluated according to _your_ specifications.
 
 You can compose expressions using __symbols__; in this case, `species` is a symbol. Let's say you are building a shiny app where you need to call a dplyr function on a data frame that you upload to the app. When you are writing the app, you cannot possibly know the variable names that will be used at runtime. 
 
-It may not be evident how to build expression for dplyr to evaluate. We will see how the tidyeval framework lets you build expressions using symbols that you can create at runtime.
+It may not be evident how to build expression for dplyr to evaluate. We will see how the tidy evaluation framework lets you build expressions using symbols that you can create at runtime.
 
-If you are already a little familiar with tidyeval, you have heard about __quosures__. These are the central feature of tidyeval. For now, it may be useful to think about a quosure as an expression that carries along with it the context where it was created. If we think of an expression as a set of instructions, we can think of a quosure as a set of instructions bundled with a set of materials. We will look at quosures more explicitly later in this tutorial.
+If you are already a little familiar with tidy evaluation, you have heard about __quosures__. These are the central feature of tidy evaluation. 
+As Hadley pointed out in an [old vignette](https://mran.microsoft.com/snapshot/2017-12-11/web/packages/rlang/vignettes/tidy-evaluation.html), the quosures were [invented by Luke Tierney in 2000](https://github.com/wch/r-source/commit/a945ac8e6a82617205442d44a2be3a497d2ac896), to allow a formula to access the environment where it was created.
+
+Indeed, a quosure is an expression that carries along with it the context where it was created. If we think of an expression as a set of instructions, we can think of a quosure as a set of instructions bundled with a set of materials. We will look at quosures more explicitly later in this tutorial.
 
 > "Patience, for the Jedi it is time to eat as well." - Yoda
 
-## Tidyeval and tidyverse 
+## Tidy evaluation and Tidyverse 
 
 One of the mantras of the tidyverse is "data first!" 
 
@@ -215,30 +313,31 @@ Tidyverse functions are designed so that a data-frame is the first argument wher
 Let's find the youngest character(s) from each species.
 
 1. Run the code the code in the block below; confirm that we get the result we expect.
-2. Uncomment the expression `birth_year <- c(15, 19)`, rerun. What happens?
+2. Uncomment the commented code, rerun. What happens?
 
 ```{r birth-year, exercise=TRUE}
 # birth_year <- c(15, 19) 
+# min(birth_year)
 
 starwars %>%
   select(name, species, birth_year) %>%
   group_by(species) %>%
-  filter(birth_year == min(birth_year, na.rm = TRUE)) 
+  filter(birth_year == min(birth_year)) 
 ```
 
-The tidyverse would be, as C3PO might say, "not entirely stable" if defining a variable with the same name as a data-frame column changed the result. 
+The tidyverse would be, as C3PO might say, ["not entirely stable"](https://www.youtube.com/watch?v=13fen80rnnk) if defining a variable with the same name as a data-frame column changed the result. 
 
 ----
 
 Perhaps we can interpret "data first!" another way: when a tidyverse function evaluates an expression, it looks in the _data first_, then in the calling context. We can work confidently with tidyverse functions because they behave consistently according to a convention.
 
-In the next sections, we will use tidyeval with dplyr functions: first calling them directly, then writing functions that call dplyr functions. 
+In the next sections, we will use tidy evaluation with dplyr functions: first calling them directly, then writing functions that call dplyr functions. 
 
-## Using functions that use tidyeval
+## Using tidy-evaluation functions
 
 ### Motivation
 
-The next couple of sections will talk about how we can use, and even write, functions that use tidyeval. As we make our way through these sections, I'd like to keep a motivating case in mind, writing __shiny__ apps. 
+The next couple of sections will talk about how we can use, and even write, functions that use tidy evaluation. As we make our way through these sections, I'd like to keep a motivating case in mind, writing __shiny__ apps. 
 
 In a shiny app, let's say you want your user to be able to specify a data frame, filter on some condition, then make a scatterplot, letting your user specify your axes. To keep the example a little simpler, let's say our goal is to be able to specify a data frame, then a filtering condition.
 
@@ -251,7 +350,7 @@ I'll refer back to this motivating example as much as I can, as we make our way 
 
 ---
 
-In tidyeval, we compose expressions. In my (albeit limited) experience, I have come across three types of expressions; an expression can have more than one type:
+In tidy evaluation, we compose expressions. In my (albeit limited) experience, I have come across three types of expressions; an expression can have more than one type:
 
 - **"valuey"** expressions: these evaluate to a set of values, e.g. `dplyr::filter()`.
 - **"selectly"** expressions: these evaluate to identify columns in a data frame, e.g. `dplyr::select()`.
@@ -300,8 +399,8 @@ Recall that we are composing a string by unquoting: `{input_value}` is replaced 
 
 ---
 
-Instead of composing strings, we want to compose expressions; the tidyeval framework provides an __unquoting__ function.
-The `!!` operator acts on expressions in tidyeval like the `{}` acts on strings in `glue()`: it evaluates its contents and incorporates the result into the expression.
+Instead of composing strings, we want to compose expressions; the tidy evaluation framework provides an __unquoting__ function.
+The `!!` operator acts on expressions in tidy evaluation like the `{}` acts on strings in `glue()`: it evaluates its contents and incorporates the result into the expression.
 
 ##### Your turn
 
@@ -347,7 +446,7 @@ We see this word "quosure" again. I find it useful to think about a quosure as a
 
 We have worked out how to specify a value unambiguously. Our next step is to specify the data frame and the column to filter. 
 
-Symbols can be used to compose expressions. The tidyeval framework provides a function to convert strings into symbols, `sym()`:
+Symbols can be used to compose expressions. The tidy evaluation framework provides a function to convert strings into symbols, `sym()`:
 
 ```{r}
 str(
@@ -415,7 +514,7 @@ In (2.), the variable `parsec` *is* found in our context - dplyr evaluates `pars
 
 ---
 
-The tidyeval framework has a tool to make sure that we look in _only_ the data for a variable, a pronoun named `.data`. You can use this to compose expressions that throw an error if variables are not found in the data.
+The tidy evaluation framework has a tool to make sure that we look in _only_ the data for a variable, a pronoun named `.data`. You can use this to compose expressions that throw an error if variables are not found in the data.
 
 Here are some examples:
 
@@ -455,7 +554,7 @@ By using the `.data` pronoun, we can make sure that the expression makes sense i
 
 ---
 
-When we use tidyeval with dplyr functions, dplyr evaluates the expressions that you provide. It can be useful to keep in mind what the dplyr function is evaluating your expressions *to*. `filter()` evaluates its expressions to logical *values* - it wants `TRUE` or `FALSE`, so I think of `filter()` as wanting "valuey" expressions. Other dplyr functions may expect other types of expressions, let's look at some of those differences.   
+When we use tidy evaluation with dplyr functions, dplyr evaluates the expressions that you provide. It can be useful to keep in mind what the dplyr function is evaluating your expressions *to*. `filter()` evaluates its expressions to logical *values* - it wants `TRUE` or `FALSE`, so I think of `filter()` as wanting "valuey" expressions. Other dplyr functions may expect other types of expressions, let's look at some of those differences.   
 
 ### "selecty" expressions
 
@@ -561,9 +660,9 @@ For extra credit, wrap the call in `quo()` to see the instructions. For the purp
 
 Have fun!
 
-## Writing functions that use tidyeval
+## Writing tidy-evaluation functions
 
-In the previous section, we learned how to compose expressions for use with functions that use tidyeval; in this section, we try to complete that picture. Here, we will see how to write functions that use tidyeval.
+In the previous section, we learned how to compose expressions for use with functions that use tidy evaluation; in this section, we try to complete that picture. Here, we will see how to write functions that use tidy evaluation.
 
 The overall goal is to write code, and to let your functions' users write code, that makes it clear what is intended to happen; that makes it unambiguous how an expression is to be evaluated.
 
@@ -717,7 +816,7 @@ There are a couple of things to note here:
 
 ### Multiple variables
 
-Let's say we want to specify more than one grouping variable. In our function signature, we would have a `...` set of arguments to represent multiple expressions. The tidyeval framework has some tools for this situation.
+Let's say we want to specify more than one grouping variable. In our function signature, we would have a `...` set of arguments to represent multiple expressions. The tidy evaluation framework has some tools for this situation.
 
 ##### Your turn
 
@@ -748,18 +847,13 @@ To capture a list of `...` expressions as quosures, we use the `enquos()` functi
 
 As you know, coding conventions for a package function are a little different than for interactive programming. Most prominently, calls to functions in other packages specify the namespace, i.e. `dplyr::filter()` rather than `filter()`. For commonly-used fundamental functions, like `quo()` and `sym()`, from __rlang__, we can import these into the package itself, avoiding the need prepend with `rlang::`. For example, see [`utils-tidy-eval.R`](https://github.com/ijlyttle/learnr.tidyeval/blob/master/R/utils-tidy-eval.R) in this package's R directory.  
 
-The [__usethis__](http://usethis.r-lib.org) package makes it very easy for you to use tidyeval functions in your package-functions, _and_ pass R CMD CHECK. For this package, I used the `use_tidyeval()` function to generate [`utils-tidy-eval.R`](https://github.com/ijlyttle/learnr.tidyeval/blob/master/R/utils-tidy-eval.R). As you can see, it imports and re-exports a lot of rlang functions - only a few of which we have been able to cover here.
+The [__usethis__](http://usethis.r-lib.org) package makes it very easy for you to use tidy evaluation functions in your package-functions, _and_ pass R CMD CHECK. For this package, I used the `use_tidyeval()` function to generate [`utils-tidy-eval.R`](https://github.com/ijlyttle/learnr.tidyeval/blob/master/R/utils-tidy-eval.R). As you can see, it imports and re-exports a lot of rlang functions - only a few of which we have been able to cover here.
 
 To demonstrate that you can use these steps to write a function that works and passes R CMD CHECK, I have included a function `ex_filter_name_value()` in this package, you can inspect it [here](https://github.com/ijlyttle/learnr.tidyeval/blob/master/R/example-filter.R). 
 
 ## More stuff
 
-Hopefully, you have been able to use this tutorial to get a sense of tidyeval principles and tools. I would encourage you to go through these references by the tidyeval architects. You can use these to deepen your knowledge, and introduce yourself to the supporting theory:
+Hopefully, you have been able to use this tutorial to get a sense of tidy evaluation principles and tools. I would encourage you to go through these references by the tidy evaluation architects. You can use these to deepen your knowledge, and introduce yourself to the supporting theory.
 
-- [Programming with dplyr](http://dplyr.tidyverse.org/articles/programming.html)
-- [Tidy evaluation](https://tidyeval.tidyverse.org/)
-- [Erratum tidyr 0.7.0](https://www.tidyverse.org/articles/2017/09/erratum-tidyr-0.7.0/)
-- [Tidy evaluation in ggplot2](https://www.tidyverse.org/articles/2018/07/ggplot2-tidy-evaluation/)
 
-There are also a lot of resources appearing on around the internet, produced by other R users who are also wrapping their heads around tidyeval; fortunately "tidyeval" is a very Google-friendly term.
 
